--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -15,7 +15,7 @@
     <h3>1. Fill out the required information bellow and press the submit button</h3>
     <h3>2. Once directed to the login page, sign in with your new username and password you've created</h3>
 
-    <form method="POST" action="register.html">
+    <form th:method="POST" th:action="register.html">
 
         <label for="firstName">First Name:</label>
         <input type="text" id="firstName" name="firstname">
