--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -2,29 +2,40 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <title>Footer</title>
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
     <style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
         footer {
-            background-color: #b62727;
+            background-color: #b6b6b6;
+            position: fixed;
+            width: 100%;
+            height: 100px;
+            bottom: 0;
+            text-align: center;
+            left: 0;
         }
         .container{
             display: flex;
             justify-content: space-around;
-            position: relative;
         }
-        #footer {
-            position: absolute;
-            width: 100%;
-            height: 100px;
-        }
+
     </style>
 </head>
 <body>
 <footer th:fragment="footer" id="footer" class="container">
     <div class="row">
         <div class="col">
-            <h1>Navigation</h1>
+            <p>Navigation</p>
         </div>
         <div class="col">
             <li><a href="#">Home</a></li>
@@ -36,7 +47,7 @@
 
     <div class="row">
         <div class="col">
-            <h1>Policies</h1>
+            <p>Policies</p>
         </div>
         <div class="col">
             <li><a href="#"></a>Privacy Policy</li>
@@ -57,18 +68,21 @@
 
     <div class="row">
         <div class="col">
-            <h1>Connect With Us</h1>
+            <p>Connect With Us</p>
         </div>
         <div class="col">
-            <img src="https://img.icons8.com/ios-glyphs/60/000000/phone--v1.png"/>
-            <h1>210 - 387 - 9926</h1>
+            <img src="https://img.icons8.com/ios-glyphs/30/000000/phone--v1.png"/>
+            <p>210 - 387 - 9926</p>
         </div>
         <div class="col">
-            <img src="https://img.icons8.com/ios-filled/50/000000/email.png"/>
-            <h1>contactus@wilsonhalldesigns.com</h1>
+            <img src="https://img.icons8.com/ios-filled/30/000000/email.png"/>
+            <p>contactus@wilsonhalldesigns.com</p>
         </div>
     </div>
 
 </footer>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 </html>
