--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
 
     <style>
-        #bodyContent {
-           background-color: red;
+       .container {
+           background-image: url("static/img/homePageBackgroundImage.jpg");
+           display: flex;
+           flex-direction: column;
         }
     </style>
 </head>
