--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -1,55 +1,61 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:fragment="head">
-    <meta charset="UTF-8">
-    <title>NavBar</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!-- Bootstrap CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
+<style>
+    * {
+        margin: 0;
+        padding: 0;
+    }
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
-    <style>
-        *{
-            margin: 0;
-            padding: 0;
-        }
-        .container {
-            display: flex;
-            justify-content: space-between;
-        }
-        nav {
-            width: 100%;
-            height: 100px;
-            background-color: #c2c2c2;
-        }
-        .nav-list {
-            list-style: none;
-            display: flex;
-            margin-left: 15px;
-        }
+    .container {
+        display: flex;
+        justify-content: space-between;
+        height: 100px;
+        width: 100%;
+    }
 
-        .nav-item {
-            margin-left: 15px;
-        }
-    </style>
-</head>
-<body>
-<nav th:fragment="navbar" class="container navbar" id="navbar">
-    <div>
-        <a class="nav-brand" href="home.html"><img th:src="@{headerLogo.PNG}" height="200px" width="200px" alt="header logo"></a>
-        <img th:src="@{img/footerLogo.PNG}" height="200px" width="200px" alt="add"/>
+    nav {
+        width: 100vw;
+        height: 100px;
+        background-color: #c2c2c2;
+        display: flex;
 
-    </div>
-    <ul class="nav-list">
-        <li class="nav-item"><a href="home.html"></a>Home</li>
-        <li class="nav-item"><a href="about.html"></a>About</li>
-        <li class="nav-item"><a href="contact.html"></a>Contact</li>
-        <li class="nav-item"><a href="login.html"></a>Login</li>
+    }
+
+    .nav-list {
+        list-style: none;
+        margin-left: 15px;
+        display: inline-block;
+    }
+
+    .nav-item {
+        margin-left: 15px;
+        display: inline-block;
+    }
+
+    #navImg {
+        margin: 0;
+        padding: 0;
+    }
+</style>
+
+
+<nav th:fragment="navbar" class="navbar navbar-default" id="navbar">
+    <div class="container">
+        <div class="navbar-header">
+
+            <a href="home.html"><img src="/img/headerLogo.PNG" alt="headerLogo" width="102px" id="navImg"></a>
+
+        </div>
+
+    <ul class="nav-list navbar-right">
+        <a href="home.html"><li class="nav-item">Home</a></li>
+        <a href="about.html"><li class="nav-item">About</a></li>
+        <a href="contact.html"><li class="nav-item">Contact</a></li>
+        <a href="login.html"><li class="nav-item">Login</a></li>
     </ul>
+    </div>
 </nav>
 
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-</body>
-</html>
